...
        android:id="@+id/img_01_home"
        android:layout_width="409dp"
        android:layout_height="380dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:baselineAlignBottom="false"
        app:layout_constraintBottom_toTopOf="@+id/btnMainInvitado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_01_ingresa"
        app:srcCompat="@drawable/img_01_home" />


        <Button
            android:id="@+id/btnMainColeccionista"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
...
