<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">




    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.album.AlbumList">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/album_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/album_empty"
            android.text="No earthQuake rigth now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:visibility="gone"
            android:text="No se encontró data" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_gravity="bottom|right"
            android:layout_margin="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@android:drawable/ic_input_add"
            app:backgroundTint="#8BC34A"
            tools:ignore="SpeakableTextPresentCheck" />

    </FrameLayout>
</layout>