...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <Button
            android:id="@+id/btnInvitAlbum"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_01_ingresa"
            app:strokeColor="@color/primary_blue"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnInvitArtista"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/txt_04_artistas"
...
