<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.artista.ArtistaList">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artista_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </FrameLayout>
</layout>